objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>vlocity_cmt__Billing</fullName>
        <description>There is a complaint about billing. This has to do with money.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Service Problem</fullName>
        <description>There is something wrong with the service. This does not include Billing issues.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisputeId__c</fullName>
        <label>DisputeId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Dispute_ID__c</fullName>
        <label>Dispute ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous Activity</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IndicatorImageName__c</fullName>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriorityImageName__c</fullName>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__BillingAccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__ServiceAccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__Statement__c.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Line Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__r.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__StatementLineItem__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
                <value>
                    <fullName>Wrong Type</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
                <value>
                    <fullName>Wrong Type</fullName>
                </value>
                <value>
                    <fullName>Not Authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Billing</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Billing</businessProcess>
        <description>Billing complaint.</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneCase</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Support Process</businessProcess>
        <description>Mobile Phone Case</description>
        <label>MobilePhoneCase</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Service</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Service Problem</businessProcess>
        <description>There is something wrong with the service provided or a product associated with that service.</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>